<resources>
    <string name="app_name">RPOMP_L7</string>
        <!-- Main Activity -->
        <string name="camera">Камера</string>
        <string name="media">Медиа</string>
        <string name="gallery">Галерея</string>

        <!-- Camera Activity -->
        <string name="capture">Сделать фото</string>
        <string name="select">Выбрать из галереи</string>
        <string name="save">Сохранить</string>

        <!-- Media Activity -->
        <string name="select_video">Выбрать видео</string>
        <string name="select_audio">Выбрать аудио</string>
        <string name="pause">Пауза</string>
        <string name="stop">Стоп</string>

        <!-- Gallery Activity -->
        <string name="select_images">Выбрать изображения</string>
        <string name="previous">Назад</string>
        <string name="next">Вперед</string>

        <!-- Common -->
        <string name="back">На главную</string>
        <string name="now_playing">Сейчас играет:</string>
</resources>