<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/background">

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/white"/>

</LinearLayout>