<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@+id/navigationPanel"/>

    <LinearLayout
        android:id="@+id/navigationPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/btnSelectImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_images"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>