<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tvNowPlaying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoView"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@color/white"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNowPlaying"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/btnSelectVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_video"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnSelectAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_audio"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSelectVideo"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        tools:ignore="NotSibling">

        <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>